--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -5,9 +5,11 @@
     android:layout_height="wrap_content">
     <TextView
         android:id="@+id/tv_comment"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dp_10"
         android:textSize="@dimen/sp_14"
+        android:background="@drawable/bg_item_comments"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:layout_marginBottom="@dimen/dp_2"
         />
 </RelativeLayout>
